Fix editor visual overlap with toolbox

--- a/src/components/Editor/style.css
+++ b/src/components/Editor/style.css
@@ -1,7 +1,7 @@
 #mainEditorDiv {
     width: 100%;
     height: 100%;
-    padding-top: 4rem;
+    padding-top: 2rem;
     grid-column-start: 2;
     grid-column-end: 2;
 }
