--- a/src/components/Toolbox/style.css
+++ b/src/components/Toolbox/style.css
@@ -6,7 +6,6 @@
     grid-column-end: 1;
 
     padding-left: 2rem;
-    padding-right: 2rem;
     display: flex;
     flex-direction: column;
 
